--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Hello, World</h1>
-        <p>Call me Inarius.</p> 
+        <p>Call me Inarius!</p> 
     </body>
 </html>
