--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
         <p>This site is a sample project for the <strong>awesome</strong> Git tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em>.</a>
         </p>
         <a href="https://www.flickr.com/photos/puliarfanita/22959238329"></a>
-            <img src="images/polar_bear.jpg" alt="Polar Bear" >
+            <img src="images/polar_bear.jpg" alt="Polar Bear">
         </a>
+        <br>
+        <a href="index.html">Home</a>
     </body>
 </html>
